# trijectory

./: .gitignore  Cargo.toml  README.md  check.bat  default_worker_config.json  pyproject.toml  rs_trijectory.pyi  ruff.toml
src/: lib.rs  main.rs  rs_trijectory.rs
src/rs_trijectory/: debounce_metric.rs  engine_param.rs  geometric_procedure.rs  rust_engine.rs
src/trijectory/: main.py  node_ops.py  plotter.py  post_study.py  start_worker.py  type_aliases.py
src/trijectory/engine/: base_engine.py  debounce_metric.py  engine_param.py  python_engine.py
tests/engine/: test_debounce_metrics.py
trijectory/: main.py  node_ops.py  plotter.py
trijectory/engine/: debounce_metric.py  engine_param.py  geometric_procedure.py  python_engine.py  rust_engine.py
