[package]
name = "rs_trijectory"
version = "0.1.0"
edition = "2024"

[lib]
name = "rs_trijectory"
crate-type = ["cdylib", "rlib"]

[dependencies]
ndarray = "0.16.1"
ndarray-linalg = { version = "0.17.0", features = ["intel-mkl-static"] }
numpy = "0.25.0"
pyo3 = { version = "0.25.1", features = ["extension-module"] }
