[project]
name = "trijectory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lite-dist2>=0.5.0",
    "maturin>=1.8.7",
    "numpy>=2.2.6",
    "tqdm>=4.67.1",
]

[project.scripts]
register-study = "trijectory.node_ops:register_study"
start-worker = "trijectory.node_ops:start_worker"
get-study = "trijectory.node_ops:save_study_result"
plot = "trijectory.plotter:main"

[dependency-groups]
dev = [
    "imageio>=2.37.0",
    "matplotlib>=3.10.3",
    "pytest>=8.3.5",
    "ruff>=0.12.0",
    "ty>=0.0.1a11",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "trijectory.rs_trijectory"
