[project]
name = "trijectory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lite-dist2>=0.6.5",
    "maturin>=1.8.7",
    "numpy>=2.4.4",
    "tqdm>=4.67.1",
]

[project.scripts]
register-study = "trijectory.node_ops:register_study"
start-worker = "trijectory.node_ops:start_worker"
get-study = "trijectory.node_ops:save_study_result"
plot = "trijectory.plotter:main"

[dependency-groups]
dev = [
    "imageio>=2.37.0",
    "matplotlib>=3.10.3",
    "pytest>=9.0.2",
    "ruff>=0.15.10",
    "ty>=0.0.29",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "trijectory.rs_trijectory"
